Changes in index.html
Removing the sentence "This is a test!" in the testing branch.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<h6> Title with with heading 6 </h6>
 
 <p>
-	<strong> Paragraph 1 (strong tag). </strong> This is a test! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<strong> Paragraph 1 (strong tag). </strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
