--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 	<h5> Title with theading 5 </h5>
 	<h6> Title with with heading 6 </h6>
 
+<p> There's a thin line between being a hero and being a memory. </p>
+
 <p>
 	<strong> Paragraph 1 (strong tag). </strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
