--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<!DOCTYPE html> <!-- This declaration is to inform the web browser that this document is in HTML5 -->
+<!DOCTYPE html>
+<!-- This declaration is to inform the web browser that this document is in HTML5 -->
 
-<html lang="zxx"> <!-- The language declaration indicates that this site has Lorem ipsum text. -->
+<html lang="zxx">
+<!-- The language declaration indicates that this site has Lorem ipsum text. -->
+
 <head>
-	<meta charset="utf-8"> <!-- Unicode (UTF 8) is a standard and supports most characters -->
+	<meta charset="utf-8">
+	<!-- Unicode (UTF 8) is a standard and supports most characters -->
 	<title>Learning HTML</title>
 </head>
+
 <body>
 	<h1> Title with heading 1 </h1>
 	<h2> Title with heading 2 </h2>
@@ -13,61 +18,75 @@
 	<h5> Title with theading 5 </h5>
 	<h6> Title with with heading 6 </h6>
 
-<p>
-	<strong> Paragraph 1 (strong tag). </strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-</p>
+	<p>
+		<strong> Paragraph 1 (strong tag). </strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+		ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+		ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
 
-<p>
-	<em> Paragraph 2 (emphasis tag). </em> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
-</p>
+	<p>
+		<em> Paragraph 2 (emphasis tag). </em> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
+		ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+		ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
 
-<h3> This is an ordered list example: </h3>
-<ol> <!-- Ordered list -->
-	<li>Learn HTML</li> <!-- List item -->
-	<li>Learn CSS</li> <!-- List item -->
-	<li>Learn Javascript</li> <!-- List item -->
-</ol>
+	<h3> This is an ordered list example: </h3>
+	<ol>
+		<!-- Ordered list -->
+		<li>Learn HTML</li>
+		<!-- List item -->
+		<li>Learn CSS</li>
+		<!-- List item -->
+		<li>Learn Javascript</li>
+		<!-- List item -->
+	</ol>
 
-<h3> This is an unordered list example: </h3>
-<ul> <!-- Unordered list -->
-	<li>Learn HTML</li> <!-- List item -->
-	<li>Learn CSS</li> <!-- List item -->
-	<li>Learn Javascript</li> <!-- List item -->
-</ul>
+	<h3> This is an unordered list example: </h3>
+	<ul>
+		<!-- Unordered list -->
+		<li>Learn HTML</li>
+		<!-- List item -->
+		<li>Learn CSS</li>
+		<!-- List item -->
+		<li>Learn Javascript</li>
+		<!-- List item -->
+	</ul>
 
-<h3> Description list: </h3>
+	<h3> Description list: </h3>
 
-	<DL> <!-- Description list -->
+	<DL>
+		<!-- Description list -->
 
-		<DT>Cofee</DT> <!-- Description term -->
-		<dd>Black cofee</dd> <!-- Description detail -->
-		<dd>Coffe with cream </dd> <!-- Description detail -->
-		<dd>Capishino</dd> <!-- Description detail -->
-		
+		<DT>Cofee</DT>
+		<!-- Description term -->
+		<dd>Black cofee</dd>
+		<!-- Description detail -->
+		<dd>Coffe with cream </dd>
+		<!-- Description detail -->
+		<dd>Capishino</dd>
+		<!-- Description detail -->
+
 	</DL>
 
-    <DL> <!-- Description list -->
+	<DL>
+		<!-- Description list -->
 
-		<DT>Juice</DT> <!-- Description term -->
-		<dd>Orange juice</dd> <!-- Description detail -->
-		<dd>Apple Juice</dd> <!-- Description detail -->
-		<dd>Pineapple juice</dd> <!-- Description detail -->
-		
+		<DT>Juice</DT>
+		<!-- Description term -->
+		<dd>Orange juice</dd>
+		<!-- Description detail -->
+		<dd>Apple Juice</dd>
+		<!-- Description detail -->
+		<dd>Pineapple juice</dd>
+		<!-- Description detail -->
+
 	</DL>
 
-<footer> 		
+	<footer>
 		<em> This footer was made with an emphasis tag. Site made by Alexandre Saad. </em>
-</footer>
+	</footer>
 
 </body>
 
